2.6.0.

-------------------------------------------------------------------
Changes in beta release 2.7.1 (not yet released)

* New features:

  - The option "forget" to the Maximize command allows to
    unmaximize a window without changing its size and position.

* Bug fixes:

  - FvwmForm now honours a Xinerama screen specifier in its
    geometry.

-------------------------------------------------------------------
Changes in beta release 2.7.0 (15-Apr-2011)

  - As 2.6.0 -- this release is to ensure there's no 2.5.X tarballs
    around, since this is now 2.7.0 in terms of development.

-------------------------------------------------------------------
Changes in stable release 2.6.1 (16-Apr-2011)

* New features:

  None.

* Bug fixes:

  - Make the version and check of Fribidi >= 0.19.2
  - fvwm-menu-desktop:
        - Make XML::Parser check runtime as it's a non-standard
          module.
        - Fix perl version check.

-------------------------------------------------------------------
Changes in stable release 2.6.0 (15-Apr-2011)

* New features:

  - Support libpng 1.5.0's slightly newer API.

* Bug fixes:

  - Fix width of FvwmTaskBar to fit on screen properly by using
    the correct module information to determine the border size.
  - Fix resizing shaded windows with a shade direction that does
    not match the window's gravity.  Shaded windows might have
    jumped to strange positions when being resized by the
    application.
  - FvwmIconMan now accepts an optional module alias when running
    in transient mode.
  - Use of the NoUSPosition style is now properly reported by
    "BugOpts ExplainWindowPlacement on".
  - Fix the CursorMove command to no longer move the pointer beyond
    the boundary of a page, if EdgeScroll was set to disable page
    flipping.
  - Fix NeverFocus windows from taking focus when opening menus,
    etc.


  - Plus *MANY* other fixes, improvements, etc.  Please see the
    docs/ANNOUNCE file from 2_6_0.